<resources>
    <!--Name of Application-->
    <string name="app_name">TapHelp</string>

    <!--Heading of All Screens in App Bar-->
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu Options-->
    <string name="action_settings">Settings</string>

    <!--All Fields present on Sign Up Screen-->
    <string name="registerText">SignUp Here.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userName">Username</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phone">Contact number</string>
    <string name="zipCode">5 Digit Zipcode</string>
    <string name="address">Postal Address</string>
    <string name="submit">Sign Up</string>


    <!--Type of User-->
    <string name="user_type_prompt">Select User Type</string>
    <string-array name="user_type" id="userList">
        <item>Service Provider</item>
        <item>Service Receiver</item>
    </string-array>

    <!--Services provider and services provided by the Service Provider-->
    <string name="service_type_prompt">Select Service Type</string>
    <string-array name="service_type" id="servicesList">
        <item>Cleaning</item>
        <item>Cooking</item>
        <item>Electrician</item>
        <item>Furniture Assembly</item>
        <item>Gardening</item>
        <item>General Kitchen Help</item>
        <item>Installing Appliances</item>
        <item>Moving</item>
        <item>Plumbing</item>
        <item>Wait in line</item>
        <item>Tutor</item>
    </string-array>

    <!--Sign In Screen-->
    <string name="textLogo">Welcome To TapHelp</string>
    <string name="signInBtn">Sign In</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="divider_or">OR</string>
    <string name="googleSignIn">Sign In With Google</string>
    <string name="loginText">Please login with your Google Account</string>
    <string name="logout">Logout</string>

    <!--DashBoard Navigation Drawer-->
    <string name="settings">Settings</string>


    <!--Update Information-->
    <string name="updateInfoText">Edit Information</string>
    <string name="update">Update</string>

    <!--Delete Account-->
    <string name="delete">Delete Account</string>


    <!--All Messages-->
    <string name="msgSignInSuccess">Sign-In Successful</string>
    <string name="msgSignInFail">Sign-In Failed.Please Try Again</string>
    <string name="msgSignUpSuccess">Your Account Has Been Created Successfully</string>
    <string name="msgSignUpFail">Enter All the Fields To SignUp Successfully</string>
    <string name="wrongPassword">Please Enter the Correct Password</string>
    <string name="wrongUserName">Invalid UserName</string>
    <string name="noUser">User Does not Exists.Please SignUp</string>

    <!--Titles-->
    <string name="title_activity_home">TapHelp</string>
    <string name="title_activity_login">TapHelp</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>


